--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,9 @@
 .container {
   display: block;
-  width: 60%;
+  max-width: 850px;
   margin: 30px auto;
   padding: 40px;
+  padding-bottom: 0;
   border: 1px #f9f9ea solid;
   border-radius: 10px;
   background: linear-gradient(to top, #feffdf 0%, #ffe79a 50%, #feffdf 100%);
@@ -75,13 +76,20 @@
   border-radius: 10px;
 }
 
+.forecast {
+  text-align: right;
+  list-style: none;
+  font-size: 20px;
+  font-weight: 200;
+}
+
 .footer {
   display: block;
   margin: 0 auto;
-  text-align: center;
+  text-align: left;
   font-size: 16px;
   font-weight: 200;
-  padding: 0;
+  padding: 20px 0;
 }
 
 h1 {
@@ -112,6 +120,9 @@ p {
   font-size: 20px;
 }
 
+li {
+  padding: 10px 0;
+}
 i {
   color: #ffa952;
 }
